# sttfast-core

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
sttfast/: asr.py  cli.py  config.py  db.py  export.py  folders.py  media.py  probe.py  search.py  sentiment.py
tests/: test_asr_smoke.py  test_probe.py
